--- a/todo.org
+++ b/todo.org
@@ -1,6 +1,7 @@
 #+TITLE: AcidGSEA
 #+STARTUP: content
 * Development
+** TODO Consider the warning / error approach on gene set (symbol / entrez id) mismatches.
 ** TODO Consider adding support for `ignoreVersion` for RankedList.
 ** TODO Consider adding numeric vector method support for RankedList.
 ** TODO Consider including alpha cutoff in subtitle for `plotGeneSet` and `plotNES`.
